syntax = "proto3";

package DUNEProcessManager;

import "request_response.proto";

service ProcessManager {
  rpc boot    (Request) returns (Response) {}
  rpc restart (Request) returns (Response) {}
  rpc kill    (Request) returns (Response) {}
  rpc flush   (Request) returns (Response) {}
  rpc ps      (Request) returns (Response) {}
  rpc logs    (Request) returns (stream Response) {}
}

message ProcessRestriction {
  repeated string allowed_hosts = 1;
  repeated string allowed_host_types = 2;
}
message LogRequest {
  ProcessQuery query = 1;
  int32 how_far = 2;
}
message LogLine {
  ProcessUUID uuid = 1;
  string line = 2;
}

message ProcessUUID {
  string uuid = 1;
}

message ProcessMetadata {
  ProcessUUID uuid = 1;
  string user = 2;
  string session = 3;
  string name = 4;
}

message ProcessQuery {
  repeated ProcessUUID uuids = 1;
  repeated string names = 2;
  optional string user = 3;
  optional string session = 4;
}

message ProcessDescription {
  message StringList {
    repeated string values = 1;
  };
  message ExecAndArgs{
    string exec = 1;
    repeated string args = 2;
  };
  ProcessMetadata metadata = 1;
  map<string,string> env = 2;
  repeated ExecAndArgs executable_and_arguments = 3;
  // map<string,string> runtime_environment = 4;
}

message ProcessInstance {
  ProcessDescription process_description = 1;
  ProcessRestriction process_restriction = 2;
  enum StatusCode {
    RUNNING = 0;
    DEAD = 1;
  };
  StatusCode status_code = 3;
  optional int32 return_code = 4;
  ProcessUUID uuid = 5;
}

message BootRequest {
  ProcessDescription process_description = 1;
  ProcessRestriction process_restriction = 2;
}


message ProcessInstanceList{
  repeated ProcessInstance values = 1;
}
